# izleme

./: .replit  advanced_face_detector.py  advanced_gaze_analyzer.py  analytics_manager.py  app.py  attention_analyzer_logic.py  classroom_analyzer.py  comprehensive_detector.py  core_face_detector.py  database.py  emotion_detector.py  emotion_recognition_system.py  enhanced_app.py  enhanced_detector.py  enhanced_sessions.json  enhanced_utils.py  face_detector.py  face_recognition.py  face_recognizer.py  face_tracking_system.py  fast_detector.py  gaze_detector.py  gaze_estimator.py  main_app.py  object_detector.py  opencv_face_detector_uint8.pb  optimized_face_detector.py  precise_face_detector.py  pyproject.toml  reliable_detector.py  requirements.txt  robust_face_detector.py  sessions.json  simple_detector.py  simple_robust_processing.py  simple_storage.py  simplified_app.py  stable_face_detector.py  test_image.py  ultimate_app.py  (+4 more)
.streamlit/: config.toml
detection_data/: detections.json  known_faces.json  sessions.json
sample_images/: dummy_test_image.ppm
